# Vit-Predict

./: .replit  index.html  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/src/lib/: odds-fetcher.ts  vit-engine.ts  vit-inference.ts
artifacts/api-server/src/routes/: predictions.ts
artifacts/vit-prediction-engine/: index.html  package.json  requirements.yaml
artifacts/vit-prediction-engine/.replit-artifact/: artifact.toml
artifacts/vit-prediction-engine/src/: App.tsx  index.css
artifacts/vit-prediction-engine/src/components/: ui.tsx
artifacts/vit-prediction-engine/src/components/layout/: HistorySidebar.tsx  Sidebar.tsx
artifacts/vit-prediction-engine/src/components/predictions/: AnalysisForm.tsx  ImageUploader.tsx  PredictionDetails.tsx
artifacts/vit-prediction-engine/src/components/ui/: progress.tsx
artifacts/vit-prediction-engine/src/hooks/: use-prediction-ui.ts
artifacts/vit-prediction-engine/src/pages/: Home.tsx  not-found.tsx
attached_assets/: improved_poisson_model_1773825842198.py
data/basketball/: download_nba_games.py  download_nba_games_fixed.py  raw_data_inspect.csv  simple_download.py  verify_nba_data.py
data/basketball/raw/: NBA_2023_2024.csv
data/football/: download_football_data.py  predict_over_under.py
data/football/data/football/processed/: football_processed.csv  (+1 more)
lib/api-spec/: openapi.yaml
lib/db/src/schema/: predictions.ts
python-service/: analyze_ticket.py  data.py  debug_api.py  enhanced_model.py  main.py  main_fixed.py  model.py  requirements.txt  simple_model.py  vit_api.py  working_api_v2.py
(+1 files in other folders)
